# home-streaming

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/: flvformat.h  server.h
backend/src/: flvformat.c  main.c  server.c
frontend/: CMakeLists.txt
frontend/include/: buffer.h  client.h  flv.h  frame.h  packet.h  thread.h  window.h
frontend/src/: buffer.c  client.c  frame.c  main.c  packet.c  thread.c  window.c
